--- a/local-addons/odoo_meetings/views/meeting_type_templates.xml
+++ b/local-addons/odoo_meetings/views/meeting_type_templates.xml
@@ -8,7 +8,11 @@
             <h2>Programar una reunión</h2>
             <form>
               <div class="row">
-                <div class="col-lg-12">
+                <!-- No meeting types created by admin -->
+                <div t-if="len(meetingTypes) == 0" class="col-lg-12"> 
+                  <p>Vaya, todavía no se han creado tipos de reunión.</p>
+                </div>
+                <div t-else="" class="col-lg-12">
                   <p>Selecciona un tipo de reunión:</p>
                   <select name="meetingTypeSelect" class="form-control" id="meetingTypeSelect" onchange="show_description(this)">
                     <t t-foreach="meetingTypes" t-as="meetingType">
